--- a/core/x/libxml2/package.xml
+++ b/core/x/libxml2/package.xml
@@ -20,33 +20,21 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="libxml2-2.9.4+dfsg1.tar.xz" subdir="sources"
-                sha256sum="a74ad55e346aa0b2b41903e66d21f8f3d2a736b3f41e32496376861ab484184e"/>
-            <file src="debian-patches-7.tar.gz" subdir="patches"
-                sha256sum="ecd3dba9984d4af63bf88365c920e4365cc4ec57b9a5488c9b380fbef244aea2"/>
+            <file src="libxml2-2.9.10+dfsg.tar.xz" subdir="sources"
+                sha256sum="65ee7a2f5e100c64ddf7beb92297c9b2a30b994a76cd1fab67470cf22db6b7d0"/>
+            <file src="debian-patches-6.3.tar.gz" subdir="patches"
+                sha256sum="12a496784861ff2decc271c26355d43b638a805098d38295c66b036b1215d37d"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
-                <file src="patches/0001-modify-xml2-config-and-pkgconfig-behaviour.patch"/>
-                <file src="patches/0002-fix-python-multiarch-includes.patch"/>
-                <file src="patches/0003-Fix-NULL-pointer-deref-in-XPointer-range-to.patch"/>
-                <file src="patches/0004-Fix-comparison-with-root-node-in-xmlXPathCmpNodes.patch"/>
-                <file src="patches/0005-Fix-XPointer-paths-beginning-with-range-to.patch"/>
-                <file src="patches/0006-Disallow-namespace-nodes-in-XPointer-ranges.patch"/>
-                <file src="patches/0007-Fix-more-NULL-pointer-derefs-in-xpointer.c.patch"/>
-                <file src="patches/0008-Fix-attribute-decoding-during-XML-schema-validation.patch"/>
-                <file src="patches/0009-Increase-buffer-space-for-port-in-HTTP-redirect-supp.patch"/>
-                <file src="patches/0010-Prevent-unwanted-external-entity-reference.patch"/>
-                <file src="patches/0011-Fix-handling-of-parameter-entity-references.patch"/>
-                <file src="patches/0012-Fix-buffer-size-checks-in-xmlSnprintfElementContent.patch"/>
-                <file src="patches/0013-Fix-type-confusion-in-xmlValidateOneNamespace.patch"/>
-                <file src="patches/0014-Fix-NULL-pointer-deref-in-xmlDumpElementContent.patch"/>
-                <file src="patches/0015-Check-for-integer-overflow-in-memory-debug-code.patch"/>
-                <file src="patches/0016-Fix-copy-paste-errors-in-error-messages.patch"/>
-                <file src="patches/0017-python-remove-single-use-of-_PyVerify_fd.patch"/>
-                <file src="patches/0018-Fix-XPath-stack-frame-logic.patch"/>
-                <file src="patches/0019-CVE-2017-8872.patch"/>
+                <file src="patches/xml2-config-fix.patch"/>
+                <file src="patches/Fix-memory-leak-in-xmlSchemaValidateStream.patch"/>
+                <file src="patches/Fix-infinite-loop-in-xmlStringLenDecodeEntities.patch"/>
+                <file src="patches/Fix-freeing-of-nested-documents.patch"/>
+                <file src="patches/python3-unicode-errors.patch"/>
+                <file src="patches/parenthesize-type-checks.patch"/>
+                <file src="patches/Fix-out-of-bounds-read-with-xmllint-htmlout.patch"/>
             </patchset>
         </patches>
 
@@ -66,7 +54,6 @@
     <xi:include href="libxml2.xml"/>
     <xi:include href="libxml2-utils.xml"/>
     <xi:include href="libxml2-dev.xml"/>
-    <xi:include href="python-libxml2.xml"/>
     <xi:include href="python3-libxml2.xml"/>
 
     <xi:include href="changelog.xml"/>
