--- a/core/r/re2c/package.xml
+++ b/core/r/re2c/package.xml
@@ -4,8 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="re2c" repo="contrib"
-            architecture-independent="false">
+    <source name="re2c" repo="core" architecture-independent="false">
         <description>
             <summary>lexer generator for C, C++ and Go</summary>
             <p>
