--- a/core/s/six/package.xml
+++ b/core/s/six/package.xml
@@ -22,16 +22,12 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="six-1.12.0.tar.gz" subdir="sources"
-                sha256sum="d16a0141ec1a18405cd4ce8b4613101da75da0e9a7aec5bdd4fa804d0e0eba73"/>
+            <file src="six-1.15.0.tar.gz" subdir="sources"
+                sha256sum="30639c035cdb23534cd4aa2dd52c3bf48f06e5f4a941509c8bafd8ce11080259"/>
         </sources>
 
         <requires>
-            <package name="python" version=">= 2.6.6-3~"/>
-            <package name="python-all"/>
-            <package name="python-py"/>
-            <package name="python-setuptools"/>
-            <package name="python3" version=">= 3.1.2-8~"/>
+            <package name="python3"/>
             <package name="python3-all"/>
             <package name="python3-py"/>
             <package name="python3-setuptools"/>
@@ -40,7 +36,6 @@
         <xi:include href="rules.xml"/>
     </source>
 
-    <xi:include href="python-six.xml"/>
     <xi:include href="python3-six.xml"/>
 
     <xi:include href="changelog.xml"/>
