--- a/core/c/cmake/package.xml
+++ b/core/c/cmake/package.xml
@@ -28,9 +28,18 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="cmake-3.13.4.tar.gz" subdir="sources"
-                sha256sum="fdd928fee35f472920071d1c7f1a6a2b72c9b25e04f7a37b409349aef3f20e9b"/>
+            <file src="cmake-3.18.4.tar.gz" subdir="sources"
+                sha256sum="597c61358e6a92ecbfad42a9b5321ddd801fc7e7eca08441307c9138382d4f77"/>
+            <file src="debian-patches-2.tar.gz" subdir="patches"
+                sha256sum="8566f7cd1106c22c53adf3bfcb6a02d930fea4994b4747abfbbc41e72f213f34"/>
         </sources>
+
+        <patches>
+            <patchset subdir="sources">
+                <file src="patches/disable_fileapi_json_extra_test.patch"/>
+                <file src="patches/Compile_with_FILE_OFFSET_BITS_64_on_32-bit_Linux.patch"/>
+            </patchset>
+        </patches>
 
         <requires>
             <package name="libarchive-dev" version=">= 2.8.0"/>
