--- a/core/s/libsolv/package.xml
+++ b/core/s/libsolv/package.xml
@@ -22,19 +22,19 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="libsolv-0.6.35.tar.gz" subdir="sources"
-                sha256sum="4b679353b62f31cc0aa27ab41d426995e96f0ab3048d95cf0d62e4bc65ac21e7"/>
-            <file src="debian-patches-2.tar.gz" subdir="patches"
-                sha256sum="eca6daa4d8664aa0c97f4a166a0e0f0ec9486a89c9befc1ccd713d3f77999cbc"/>
-            <file src="bolt-patches-1.tar.gz" subdir="patches"
-                sha256sum="247925d9924c8a9d6c0192a2874e3a22b79e4f07cd71766efe9d544ce090dd6e"/>
+            <file src="libsolv-0.7.17.tar.gz" subdir="sources"
+                sha256sum="7567f9e3ff47705d36486797220bddf4e858d5c8deb5167bd77d8d55c761f65b"/>
+            <file src="debian-patches-1.tar.gz" subdir="patches"
+                sha256sum="12a6eab98d61d75ae8f59e68fa4ef24db831a8558cc61a480fbf4e1bd1ab2cf7"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
                 <!-- Debian -->
-                <file src="patches/1004_cmake-module-path-fix.patch"/>
-                <file src="patches/1006_various-types.patch"/>
+                <file src="patches/1006_various-typos.patch"/>
+                <file src="patches/0001-Install-FindLibSolv.cmake-into-CMAKE_INSTALL_PREFIX-.patch"/>
+                <file src="patches/0002-repo_rpmdb-handle-dbpath-in-homedir.patch"/>
+                <file src="patches/0003-rpmdb2solve.c-add-homedir-functionality.patch"/>
                 <!-- Bolt -->
                 <file src="patches/0001-Add-fallback-fopencookie-implementation.patch"/>
                 <file src="patches/0002-Fixes-to-internal-fopencookie-implementation.patch"/>
