--- a/core/s/libsolv/package.xml
+++ b/core/s/libsolv/package.xml
@@ -26,6 +26,8 @@
                 sha256sum="7567f9e3ff47705d36486797220bddf4e858d5c8deb5167bd77d8d55c761f65b"/>
             <file src="debian-patches-1.tar.gz" subdir="patches"
                 sha256sum="12a6eab98d61d75ae8f59e68fa4ef24db831a8558cc61a480fbf4e1bd1ab2cf7"/>
+            <file src="bolt-patches-1.tar.gz" subdir="patches"
+                sha256sum="247925d9924c8a9d6c0192a2874e3a22b79e4f07cd71766efe9d544ce090dd6e"/>
         </sources>
 
         <patches>
