--- a/core/d/distro-tools/package.xml
+++ b/core/d/distro-tools/package.xml
@@ -17,8 +17,8 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="bolt-package-1.1.3.tar.gz" subdir="sources"
-                sha256sum="2d41641c2571c08e0459ef7112176d3ffaf1c9e232dc502a23802e5944067763"/>
+            <file src="bolt-distro-tools-1.1.5.4.tar.gz" subdir="sources"
+                sha256sum="2267dc2c1abb002c050d2d8de52874cbb900f3dcbc9c5757e131c9e5040f7742"/>
         </sources>
 
         <requires>
