--- a/core/m/mawk/package.xml
+++ b/core/m/mawk/package.xml
@@ -23,30 +23,9 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="mawk-1.3.3.tar.gz" subdir="sources"
-                sha256sum="32649c46063d4ef0777a12ae6e9a26bcc920833d54e1abca7edb8d37481e7485"/>
-            <file src="debian-patches-17.tar.gz" subdir="patches"
-                sha256sum="cc1704cb98567ea1261310a113dcd436630691cf6e1e3de6c1a2d30cb6e434f8"/>
-            <file src="mawk-1.3.3-17.debdiff.gz" subdir="patches"
-                sha256sum="13cb66b6eb5ee654d5626621d5ef476ede6b0bebac18ce765516de810e58490c"/>
+            <file src="mawk-1.3.4.20200120.tar.gz" subdir="sources"
+                sha256sum="7fd4cd1e1fae9290fe089171181bbc6291dfd9bca939ca804f0ddb851c8b8237"/>
         </sources>
-
-        <patches>
-            <patchset subdir="sources">
-                <file src="patches/mawk-1.3.3-17.debdiff"/>
-                <file src="patches/01_error-on-full-fs"/>
-                <file src="patches/02_fix-examples"/>
-                <file src="patches/03_read-and-close-redefinition"/>
-                <file src="patches/04_mawk.1-fix-pi"/>
-                <file src="patches/05_-Wall-fixes"/>
-                <file src="patches/06_parse.y-semicolons"/>
-                <file src="patches/07_mawktest-check-devfull"/>
-                <file src="patches/20_overlong-regexps"/>
-                <file src="patches/21_memcpy-to-memmove"/>
-                <file src="patches/cross-compile"/>
-                <file src="patches/autoreconf"/>
-            </patchset>
-        </patches>
 
         <requires>
             <package name="bison"/>
