--- a/core/g/libgc/package.xml
+++ b/core/g/libgc/package.xml
@@ -27,19 +27,18 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="libgc-7.6.4.tar.gz" subdir="sources"
-                sha256sum="b94c1f2535f98354811ee644dccab6e84a0cf73e477ca03fb5a3758fb1fecd1c"/>
-            <file src="debian-patches-0.4.tar.gz" subdir="patches"
-                sha256sum="ef83bc0e76a3d443d5bf7d68e8b160bc88bb7c4158b8759a77ac2df733828516"/>
+            <file src="libgc-8.0.4.tar.gz" subdir="sources"
+                sha256sum="436a0ddc67b1ac0b0405b61a9675bca9e075c8156f4debd1d06f3a56c7cd289d"/>
+            <file src="debian-patches-3.tar.gz" subdir="patches"
+                sha256sum="8d1788e0243a8654738b7997f947fa277513336d29653a4669434d438bd185a4"/>
             <file src="bolt-patches-1.tar.gz" subdir="patches"
                 sha256sum="c06f267f9f669cd57eaedf933bb8b43a2115357a68e76f33c0f53c999b1e2895"/>
         </sources>
 
         <patches>
             <patchset subdir="sources">
-                <file src="patches/02-manpage.diff"/>
                 <file src="patches/enable-threads-on-hurd.diff"/>
-                <file src="patches/enable-parallel-mark-where-supported.diff"/>
+                <file src="patches/issue329.diff"/>
                 <file src="patches/riscv-support.diff"/>
                 <file src="patches/data-start-weakref.diff"/>
             </patchset>
@@ -53,7 +52,7 @@
         <xi:include href="rules.xml"/>
     </source>
 
-    <xi:include href="libgc1c2.xml"/>
+    <xi:include href="libgc1.xml"/>
     <xi:include href="libgc-dev.xml"/>
 
     <xi:include href="changelog.xml"/>
