--- a/core/p/procps/package.xml
+++ b/core/p/procps/package.xml
@@ -18,10 +18,10 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="procps-3.3.15.tar.xz" subdir="sources"
-                sha256sum="82e8aa55b65eac116eee05f00d2a884a6374760d57100edd429d6e9b4953458d"/>
-            <file src="debian-patches-2.tar.gz" subdir="patches"
-                sha256sum="8cecd340d2fdabaa4965d48644253575ec1cb34ad29692b4e5a896f41e264128"/>
+            <file src="procps-3.3.17.tar.xz" subdir="sources"
+                sha256sum="4518b3e7aafd34ec07d0063d250fd474999b20b200218c3ae56f5d2113f141b4"/>
+            <file src="debian-patches-4.tar.gz" subdir="patches"
+                sha256sum="741d40c9817a345b8aa76d26f8fecffed205977c1177ce304daaf7fb418e86b5"/>
         </sources>
 
         <patches>
@@ -32,6 +32,7 @@
                 <file src="patches/disable_sched_test"/>
                 <file src="patches/uptime_test"/>
                 <file src="patches/ps_checks"/>
+                <file src="patches/pwait_rename"/>
             </patchset>
         </patches>
 
