--- a/core/a/autogen/package.xml
+++ b/core/a/autogen/package.xml
@@ -25,10 +25,10 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="autogen-5.18.12.tar.xz" subdir="sources"
-                sha256sum="be3ba62e883185b6ee8475edae97d7197d701d6b9ad9c3d2df53697110c1bfd8"/>
+            <file src="autogen-5.18.16.tar.xz" subdir="sources"
+                sha256sum="f8a13466b48faa3ba99fe17a069e71c9ab006d9b1cfabe699f8c60a47d5bb49a"/>
             <file src="debian-patches-4.tar.gz" subdir="patches"
-                sha256sum="71596b34e27f4cf1262adc7e1280e2fb8a949e690e8eb4e504554c4a1da589d8"/>
+                sha256sum="c0395748061e7c0f0d22b71e7b2e0267280627c3a9ea9d9d3fda99de459cc53a"/>
             <file src="bolt-patches-1.tar.gz" subdir="patches"
                 sha256sum="51b81f0729a5bf5b117231640f6695b06de030a52a56b829a966412bd1eb3986"/>
         </sources>
@@ -36,8 +36,10 @@
         <patches>
             <patchset subdir="sources">
                 <!-- Debian -->
-                <file src="patches/05_cross_pkg_config.diff"/>
                 <file src="patches/10_libopts_tarball_perms.diff"/>
+                <file src="patches/20_no_Werror.diff"/>
+                <file src="patches/30_ag_macros.m4_syntax_error.diff"/>
+                <file src="patches/31_allow_overriding_AGexe_for_crossbuild.diff"/>
                 <!-- Bolt -->
                 <file src="patches/boostrap-shlib-no-bashism.patch"/>
             </patchset>
