--- a/core/b/bash/package.xml
+++ b/core/b/bash/package.xml
@@ -4,7 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="bash" repo="contrib"
+    <source name="bash" repo="core"
             architecture-independent="false">
         <description>
             <summary>GNU Bourne Again SHell</summary>
