--- a/core/p/protobuf-c/package.xml
+++ b/core/p/protobuf-c/package.xml
@@ -27,15 +27,15 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="protobuf-c-1.3.1.tar.gz" subdir="sources"
-                sha256sum="51472d3a191d6d7b425e32b612e477c06f73fe23e07f6a6a839b11808e9d2267"/>
+            <file src="protobuf-c-1.3.3.tar.gz" subdir="sources"
+                sha256sum="22956606ef50c60de1fabc13a78fbc50830a0447d780467d3c519f84ad527e78"/>
         </sources>
 
         <requires>
-            <package name="libprotobuf-dev" version=">= 2.6.0~"/>
-            <package name="libprotoc-dev" version=">= 2.6.0~"/>
+            <package name="libprotobuf-dev"/>
+            <package name="libprotoc-dev"/>
             <package name="pkg-config"/>
-            <package name="protobuf-compiler" version=">= 2.6.0~"/>
+            <package name="protobuf-compiler"/>
         </requires>
 
         <xi:include href="rules.xml"/>
