--- a/core/r/rsync/package.xml
+++ b/core/r/rsync/package.xml
@@ -26,13 +26,27 @@
         <xi:include href="copyright.xml"/>
 
         <sources>
-            <file src="rsync-3.1.3.tar.gz" subdir="sources"
-                sha256sum="55cc554efec5fdaad70de921cd5a5eeb6c29a95524c715f3bbf849235b0800c0"/>
+            <file src="rsync-3.2.3.tar.gz" subdir="sources"
+                sha256sum="becc3c504ceea499f4167a260040ccf4d9f2ef9499ad5683c179a697146ce50e"/>
+            <file src="debian-patches-4.tar.gz" subdir="patches"
+                sha256sum="e1c9622e5f5b8925611c8ff7c05747d778d43f06990ae3ff442469d82ce703cc"/>
         </sources>
+
+        <patches>
+            <patchset subdir="sources">
+                <file src="patches/disable_reconfigure_req.diff"/>
+                <file src="patches/skip_devices_test.patch"/>
+                <file src="patches/perl_shebang.patch"/>
+                <file src="patches/CVE-2020-14387.patch"/>
+                <file src="patches/fix_ftcbfs_configure.patch"/>
+            </patchset>
+        </patches>
 
         <requires>
             <package name="libacl1-dev"/>
             <package name="libattr1-dev"/>
+            <package name="zlib1g-dev"/>
+            <package name="libssl-dev"/>
         </requires>
 
         <xi:include href="rules.xml"/>
