--- a/core/x/xxhash/package.xml
+++ b/core/x/xxhash/package.xml
@@ -4,8 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="xxhash" repo="contrib"
-            architecture-independent="false">
+    <source name="xxhash" repo="core" architecture-independent="false">
         <description>
             <summary>Extremely fast hash algorithm</summary>
             <p>
