--- a/core/p/popt/package.xml
+++ b/core/p/popt/package.xml
@@ -4,8 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="popt" repo="contrib"
-            architecture-independent="false">
+    <source name="popt" repo="core" architecture-independent="false">
         <description>
             <summary>lib for parsing cmdline parameters</summary>
             <p>
