--- a/core/z/libzstd/package.xml
+++ b/core/z/libzstd/package.xml
@@ -4,8 +4,7 @@
         <def name="BOLT_BUILD_DIR" value="build"/>
     </defines>
 
-    <source name="libzstd" repo="contrib"
-            architecture-independent="false">
+    <source name="libzstd" repo="core" architecture-independent="false">
         <description>
             <summary>fast lossless compression algorithm -- development files</summary>
             <p>
